[project]
name = "simplezenroll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "redis[asyncio]>=7.4.0",
    "uvicorn[standard]>=0.42.0",
]
